[package]
name = "compute-node"
version = "0.1.0"
edition = "2021"
authors = ["yah2er0ne <yah2er0ne@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "compute-node"


[dependencies]
log = "0.4"
env_logger = "0.8.4"
tonic = "0.6.2"
prost = "0.9.0"
crc = "2.0"
futures = "0.3.21"
etcd-client = "0.8"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.6", features = ["derive"] }
dashmap = "5.2.0"
sonyflake = "0.1.2"

[build-dependencies]
tonic-build = "0.6.2"
